share panel for trial groups

--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -14,20 +14,23 @@
         - else
           %h1{ style: "margin-top:0;" } Welcome to MetaBright!
     %hr{ style: "margin: 0 0 10px;"}
-    - if false and @group.can_add_users?
-      / .invite_box
-      /   %div
-      /     %h3 Invite your colleagues to join you:
-      /     %p Just put their email addresses in the box below. They'll be asked to register and will automatically be added to your company's account. Your plan allows you to add up to **X** people.
-      /     %textarea{ rows: "3" }
-      /     %button.submit_button Invite
     .body
-      - if @was_trial
+      - if @is_trial
+        .welcome
+          .holder
+            %h2 Hooray! Your Free Trial is Activated!
+            %h3 Would you mind helping us spread the word?
+            %div
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/new+social+icons/icon_facebook_circle.png", onclick: sharing_popup_javascript(:facebook, "http://www.metabright.com/evaluator", @sharing_text)
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/new+social+icons/icon_plus_circle.png", onclick: sharing_popup_javascript(:google_plus, "http://www.metabright.com/evaluator", @sharing_text)
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/new+social+icons/icon_twitter_circle.png", onclick: sharing_popup_javascript(:twitter, "http://www.metabright.com/evaluator", @sharing_text)
+        %h5 Take a look at the nav bar at the top of the page. Here's a quick overview of what everything does:
+      - elsif @was_trial
         %h3 Your account upgrade has been successfully processed!
-        %p You now have access to all features of MetaBright. Here's a quick recap of what everything does:
+        %h5 You now have access to all features of MetaBright. Here's a quick recap of what everything does:
       - else
         %h3 Your company's hiring is about to get turbocharged!
-        %p Take a look at the nav bar at the top of the page. Here's a quick overview of what everything does:
+        %h5 Take a look at the nav bar at the top of the page. Here's a quick overview of what everything does:
       %ul 
         %li 
           .picture
@@ -63,5 +66,5 @@
                 = link_to "Manage your account", account_group_url(@group), class: "submit_button", style: "float: inherit;"
               - else
                 = link_to "Invite people to your account", account_group_url(@group), class: "submit_button", style: "float: inherit;"
-      %p If you need a hand getting going, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
+      %h5 If you need a hand getting going, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
       
