--- a/app/views/groups/signup/trial.html.haml
+++ b/app/views/groups/signup/trial.html.haml
@@ -45,7 +45,7 @@
             = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear", title: "back"
           = f.submit "Create My Account", class: "submit_button", style: "width: inherit;"
       %h4{ style: "font-size: 20px; margin-top: 40px; border: none;"} 
-        Some things to keep in mind about your free MetaBright account...
+        Some things to keep in mind about your trial MetaBright account...
       %ul{ style: "list-style: inherit;"}
         %li 
           %span{ style: "font-family: 'MuliRegular';" } You can create a maximum of 3 Evaluations:
