--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -482,8 +482,29 @@ body.employer .container.body { width: inherit; background-color: transparent; p
   }
   .body {
     font-size: 15px; 
-    h3 {
+    
+    .welcome {
+      width: 88%;
+      margin: 0 auto 25px;
+      border: 4px solid rgba(73, 94, 59, 0.88);
+      background: url('https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/green_texture_big3.png');
+      color: white;
       
+      h2 { font-size: 32px; line-height: 48px; }
+      h3 { font-size: 24px; }
+      img {
+        height: 75px; 
+        width: 75px;
+        &:nth-child(2) {margin: 15px 80px 5px;}
+        &:hover { position: relative; bottom: 1px;}
+        &:active { bottom: 0px;}
+      }
+    }
+    h3 {
+      margin-bottom: 5px;
+    }
+    h5 {
+      font-size: 17px; line-height: 23px;
     }
     p {
       font-sie: 15px; 
