--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -147,19 +147,28 @@ $success_color: #62c462;
     .header {
       height: 110px;
       
-      img { height: 115px; margin: -13px 0 0 -10px; float: left }
+      img { margin: 14px 16px 0 0px; height: 100px; float: left }
       h1 { font-size: 45px; font-weight: normal; width: inherit; }
       h2 { font-size: 23px; line-height: 25px; }
     }
     .body { 
-      margin: 30px 0 10px 0; 
+      margin: 23px 0 10px 0; 
       text-align: center;
       
       .editor_view legend { display: none; }
       input.error { border-color: $error_color; }
       input.successful { border-color: $success_color; color: $success_color }
       p.error { color: $error_color; }
-      p.headline_text { font-size: 17px; line-height: 28px; margin: 0px 10px 25px; }
+      p.headline_text { font-size: 17px; line-height: 28px; margin: 0px 10px 4px; }
+      .image_box {
+        img {
+          height: 80px; 
+          width: 80px;
+          &:nth-child(2) {margin: 15px 80px 5px;}
+          &:hover { position: relative; bottom: 1px;}
+          &:active { bottom: 0px;}
+        }
+      }
     }
     .exit {
       float: right; margin-top: 5px; text-decoration: none;
