--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -21,9 +21,9 @@
             %h2 Hooray! Your Free Trial is Activated!
             %h3 Would you mind helping us spread the word?
             %div
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/new+social+icons/icon_facebook_circle.png", onclick: sharing_popup_javascript(:facebook, "http://www.metabright.com/evaluator", @sharing_text)
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/new+social+icons/icon_plus_circle.png", onclick: sharing_popup_javascript(:google_plus, "http://www.metabright.com/evaluator", @sharing_text)
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/new+social+icons/icon_twitter_circle.png", onclick: sharing_popup_javascript(:twitter, "http://www.metabright.com/evaluator", @sharing_text)
+              = image_tag SHARE_FACEBOOK_BIG, onclick: sharing_popup_javascript(:facebook, evaluator_url, @sharing_text)
+              = image_tag SHARE_GOOGLE_BIG, onclick: sharing_popup_javascript(:google_plus, evaluator_url, @sharing_text)
+              = image_tag SHARE_TWITTER_BIG, onclick: sharing_popup_javascript(:twitter, evaluator_url, @sharing_text)
         %h5 Take a look at the nav bar at the top of the page. Here's a quick overview of what everything does:
       - elsif @was_trial
         %h3 Your account upgrade has been successfully processed!
