--- a/app/views/modals/headlines/_achievements.html.haml
+++ b/app/views/modals/headlines/_achievements.html.haml
@@ -1,6 +1,6 @@
 .headlines.hide{ style: " min-height: auto; width:68%;"}
   .header
-    = image_tag STONEY_SMALL_URL, style: "display: inline-block; height:auto;", alt: "Stoney"
+    = image_tag GIANT_STONEY, style: "display: inline-block; ", alt: "Stoney"
     %h1{ style: "font-size: 59px; padding-top: 8px;"} Congratulations!              
     %h2{ style: "font-size: 25px;"  }
       - new_level = @achievements[:level]
@@ -17,13 +17,14 @@
         You just reached the Top #{new_rank}!
         - subtext = "You're now ranked #{@enrollment.rank.ordinalize} in the #{@path.name} Challenge!"
         - sharing_text = "Just broke the Top #{new_rank} in the #{@path.name} Challenge on @MetaBright!"
+    .clear_floats
       
   .body
     %p.headline_text #{subtext} Share this achievement and brag to your friends.
-    %div
-      %button.submit_button_big.button.button-large{ style: "width: 190px; margin-right: 10px; float: none;", onclick: sharing_popup_javascript(:google_plus, challenge_url(@path.permalink), sharing_text) } Share on Google+
-      %button.submit_button_standard_big.button.button-large{ style: "width: 190px; margin-right: 10px; float: none;", onclick: sharing_popup_javascript(:facebook, challenge_url(@path.permalink), sharing_text) } Share on Facebook
-      %button.submit_button_blue_big.button.button-large{ style: "width: 190px; float: none;", onclick: sharing_popup_javascript(:twitter, challenge_url(@path.permalink), sharing_text) } Share on Twitter
+    .image_box
+      = image_tag SHARE_FACEBOOK_BIG, onclick: sharing_popup_javascript(:facebook, challenge_url(@path.permalink), sharing_text)
+      = image_tag SHARE_GOOGLE_BIG, onclick: sharing_popup_javascript(:google_plus, challenge_url(@path.permalink), sharing_text)
+      = image_tag SHARE_TWITTER_BIG, onclick: sharing_popup_javascript(:twitter, challenge_url(@path.permalink), sharing_text)
   
   .exit{ style: "float: right; margin-top: 24px;" }
     %a{ onclick: "$.MB.next_headline($(this).parents('.headlines'));" } Continue to Launchpad »
