making mb https friendly

--- a/app/views/admin/funnel/signups.html.haml
+++ b/app/views/admin/funnel/signups.html.haml
@@ -5,7 +5,7 @@
     |
     = link_to "Time Series", admin_funnel_path(mode: "signups")
   %h1{ style: "border-bottom: 1px solid #DDD" } Funnel
-  %script{ src: "http://code.highcharts.com/highcharts.js" }
+  %script{ src: "https://code.highcharts.com/highcharts.js" }
   :javascript
     $(function () {
       dates = #{@dates.to_json};
