--- a/app/views/groups/sandbox.html.haml
+++ b/app/views/groups/sandbox.html.haml
@@ -22,7 +22,7 @@
       %h3 Requesting User Data
       %p 
         The user request api is currently in beta, and allows you to pull basic user information as well as information on all the user's current public enrollments.
-        The API url is "http://www.metabright.com/groups/users" and must be supplied two arguments: the Group API Token and the email of the user you would like to request.
+        The API url is "https://www.metabright.com/groups/users" and must be supplied two arguments: the Group API Token and the email of the user you would like to request.
         The user must be a member of your group to request this information.
     
       %h5{ style: "margin: 15px 15px;" } #{@group.name}'s API Token: #{@group.token}
