--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -67,7 +67,7 @@
 %div.footer
   %span.copyright © 2013 MetaBright, Inc. /
   %span.footerlinks
-    %a{href: "http://metabright.blogspot.com/", target: "_blank"} Blog
+    %a{href: "https://metabright.blogspot.com/", target: "_blank"} Blog
     \/
     = link_to "Terms of Service", tos_path
 - if not current_user and @show_chat
