--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -1,5 +1,5 @@
 - if show_nav_bar and Rails.env == "production"
-  %script{ src: "http://connect.facebook.net/en_US/all.js" }
+  %script{ src: "https://connect.facebook.net/en_US/all.js" }
   :javascript
     $(function(){
       $(".invite_facebook_friends").click(function(){
