--- a/app/views/mailer/intro_drop_off.html.haml
+++ b/app/views/mailer/intro_drop_off.html.haml
@@ -1,8 +1,8 @@
-%span{:style => "font-size:24px;"} Complete your first <a href="http://www.metabright.com" style="text-decoration:none; color:inherit;">MetaBright</a> Challenge!
+%span{:style => "font-size:24px;"} Complete your first <a href="https://www.metabright.com" style="text-decoration:none; color:inherit;">MetaBright</a> Challenge!
 %br/
 %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
 %p{:style => "font-size:12px;"} 
-  Hey, we noticed that you weren't able to complete a Challenge after signing up for <a href="http://www.metabright.com" style="text-decoration:none;">MetaBright</a>. We'd love to have you back and give it another shot. 
+  Hey, we noticed that you weren't able to complete a Challenge after signing up for <a href="https://www.metabright.com" style="text-decoration:none;">MetaBright</a>. We'd love to have you back and give it another shot. 
 %p{:style => "font-size:12px;"} 
   If you need a hand to get going, or just have some feedback for us, feel free to shoot us a message at
     %a{:href => "[email]"} support@metabright.com
