--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -30,4 +30,4 @@
       %p
         Check out our
         = succeed "." do
-          %a{href: "http://metabright.blogspot.com", target: "_blank"} blog
+          %a{href: "https://metabright.blogspot.com", target: "_blank"} blog
