--- a/app/views/mailer/welcome.html.haml
+++ b/app/views/mailer/welcome.html.haml
@@ -1,7 +1,7 @@
-%span{ style: "font-size:22px;"} Welcome to <a href="http://www.metabright.com" style="text-decoration:none; color:inherit;">MetaBright</a>, #{@user.name.split.first}!
+%span{ style: "font-size:22px;"} Welcome to <a href="https://www.metabright.com" style="text-decoration:none; color:inherit;">MetaBright</a>, #{@user.name.split.first}!
 %br/
 %hr{ style: "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
-%p{ style: "font-size:12px;"} Thanks for signing up for <a href="http://www.metabright.com">MetaBright</a>. Remember to always choose the same option to log in to MetaBright as you did to sign up. Otherwise, you might accidentally create two separate accounts.
+%p{ style: "font-size:12px;"} Thanks for signing up for <a href="https://www.metabright.com">MetaBright</a>. Remember to always choose the same option to log in to MetaBright as you did to sign up. Otherwise, you might accidentally create two separate accounts.
 %p{ style: "font-size:12px;"} If you have any questions about MetaBright, you can reach out to our support team at #{mail_to "team@metabright.com"}.
 %p{ style: "font-size:12px;"} 
   Thanks,
