--- a/app/views/group_mailer/cold_sales.html.haml
+++ b/app/views/group_mailer/cold_sales.html.haml
@@ -3,7 +3,7 @@
 %p{ style: "font-size:12px;"} I’m contacting a handful of recruiters that use Bullhorn who I think will be able to get the most out of MetaBright. I’m so confident you’ll love our platform that I want you to try it out for free. Use this coupon code and the first month is on us: <strong>TRYMBFREE</strong>
 %p{ style: "font-size:12px;"} 
   Get started at: 
-  %a{href: "http://www.metabright.com/evaluator", target: "_blank"} www.metabright.com/evaluator
+  %a{href: "https://www.metabright.com/evaluator", target: "_blank"} www.metabright.com/evaluator
 %p{ style: "font-size:12px;"} I know this message is unexpected, so if you have any questions or concerns, feel free to reach out to me. 
 %p{ style: "font-size:12px;"} Thanks!
 %p{ style: "font-size:12px;"} 
