--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -69,7 +69,7 @@
               %div
                 = image_tag NAVBAR_CHALLENGES
                 %h3 Challenges
-          = link_to "#" do
+          = link_to "#", style: "cursor: default;" do
             .option{ stye: "border-right: 1px solid #DDD;" }
               %div{ style: "cursor: default; opacity: 0.7;" }
                 = image_tag NAVBAR_SEARCH
