mb search modal

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -975,8 +975,8 @@ th {
   .modal_close img { width:20px; height:20px; }
 }
 
-/* Sign in and Register Modals */
-#login_modal, #register_modal {
+/* Sign in and Register and Search Edu Modals */
+#login_modal, #register_modal, #search_learn_more_modal {
   background-color: transparent; 
   border: none; 
   box-shadow: none;
