--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -53,6 +53,10 @@
     $("#login_modal").modal({ keyboard: true, backdrop: 'static', show: true });
   });
   
+  $(".search_learn_more").click(function(){
+    $("#search_learn_more_modal").modal({ keyboard: true, backdrop: 'static', show: true });
+  });
+  
   $(".arena_report_link").click(function(){
     $("#report_issue_modal").modal({ keyboard: true, backdrop: 'static', show: true });
   });
