--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -1,4 +1,5 @@
 #employer.employer-container{ style: "margin: 140px auto 15px; width: 550px;" }
+  = render "modals/search_edu"
   #organization_portal.aboutbox
     .header{ style: "width: 100%; border-bottom: 1px solid #DDD;" }
       = image_tag STONEY_SMALL_URL, style: "height: 72px; display: inline; vertical-align: middle", alt: "Stoney"
@@ -74,7 +75,10 @@
               %div{ style: "cursor: default; opacity: 0.7;" }
                 = image_tag NAVBAR_SEARCH
                 %h3 Search
-                %h5 Coming Soon...
+                %h5 
+                  Coming Soon...
+                  = link_to "#", class: "search_learn_more" do
+                    %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png", style: "width: 16px; height: 16px; display: inline-block; margin-bottom: 3px; opacity: 1;"}
     
 
         
