--- a/app/views/evaluations/show.html.haml
+++ b/app/views/evaluations/show.html.haml
@@ -41,21 +41,27 @@
             %th Submitted
             %th{ style: "text-align: right;" }
         %tbody
-          - @evaluations.each do |e|
+          - @evaluations.each_with_index do |e, i|
             %tr
-              %td
-                = link_to truncate(e.name, length: 30, separator: ' '), grade_group_evaluation_url(@group, @evaluation, u: e.user_id), "data-no-turbolinks" => true
-              %td= truncate(e.email, length: 25, separator: ' ')
-              - @paths.each do |p|
-                - skill_level = Enrollment.describe_skill_level(e["e#{p.id}_metascore"])
-                %td{ style: "text-align: center;"}
-                  %span{class: "label #{skill_level.downcase}" }= skill_level
-              %td
-                - if e.submitted_at
-                  #{time_ago_in_words(e.submitted_at)} ago
-              %td
-                - if e.favorited_at
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Badges/star_yellow.png", style: "width: 15px; height: 15px; margin-top: -3px;", title: "Favorited" }
+              - if @candidate_limit_reached and i >= Group::TRIAL_CANDIDATE_LIMIT
+                %td
+                  = truncate(e.name, length: 30, separator: ' ')
+                %td{ colspan: 5 }
+                  = link_to "Upgrade to view results", edit_group_path(@admin_group)
+              - else
+                %td
+                  = link_to truncate(e.name, length: 30, separator: ' '), grade_group_evaluation_url(@group, @evaluation, u: e.user_id), "data-no-turbolinks" => true
+                %td= truncate(e.email, length: 25, separator: ' ')
+                - @paths.each do |p|
+                  - skill_level = Enrollment.describe_skill_level(e["e#{p.id}_metascore"])
+                  %td{ style: "text-align: center;"}
+                    %span{class: "label #{skill_level.downcase}" }= skill_level
+                %td
+                  - if e.submitted_at
+                    #{time_ago_in_words(e.submitted_at)} ago
+                %td
+                  - if e.favorited_at
+                    %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Badges/star_yellow.png", style: "width: 15px; height: 15px; margin-top: -3px;", title: "Favorited" }
           - if @archive_exists
             %tr
               %td{ style: "border: none; "}
