--- a/app/assets/stylesheets/custom_landings.css.scss
+++ b/app/assets/stylesheets/custom_landings.css.scss
@@ -8,7 +8,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    background: white url(https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/custom_landings/airs_bg5_mod3.jpg);
+    background: rgb(75,75,75) url(https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/custom_landings/airs_bg5_mod3.jpg);
     width: 100%;
     height: 100%;
     background-size: 100%;
