--- a/app/views/group_mailer/welcome.html.haml
+++ b/app/views/group_mailer/welcome.html.haml
@@ -6,6 +6,7 @@
   %p{ style: "font-size: 12px;"} 
     Once you've had time to take MetaBright for a spin, you should consider upgrading to a full account:
     %ul{ style: "font-size: 12px;"} 
+      %li{ style: "font-size: 12px;"}  <strong>Unlimited Candidates:</strong> Aim wide with your talent search and don't miss out on your next top performer. <em>Your account is limited to measuring #{Group::TRIAL_CANDIDATE_LIMIT} candidates' skills.</em>
       %li{ style: "font-size: 12px;"}  <strong>Unlimited Evaluations:</strong> Validate the skills of your job candidates before you spend time interviewing them. <em>Your account is currently limited to three active Evaluations.</em> #{link_to "Create an Evaluation now.", new_group_evaluation_path(@group)}
       %li{ style: "font-size: 12px;"}  <strong>Additional Administrators:</strong> Add more administrators to your account so everyone in your organization can access candidate information, test results, and reports. <em>Your account only allows for one administrator.</em>
       %li{ style: "font-size: 12px;"}  <strong>Premium Support:</strong> Direct and expedited support is available in MetaBright's premium plans. <em>Your account currently has limited email support.</em>
