--- a/app/views/groups/signup/trial.html.haml
+++ b/app/views/groups/signup/trial.html.haml
@@ -49,7 +49,10 @@
       %ul{ style: "list-style: inherit;"}
         %li 
           %span{ style: "font-family: 'MuliRegular';" } You can create a maximum of 3 Evaluations:
-          An evaluation is a set of skills you wish to test your candidates on. While an unlimited number of candidates can complete each Evaluation, the maximum number of different Evaluations you can have at any given time is three.
+          An evaluation is a set of skills you wish to test your candidates on. The maximum number of different Evaluations you can have at any given time is three.
+        %li 
+          %span{ style: "font-family: 'MuliRegular';" } You can test a maximum of #{Group::TRIAL_CANDIDATE_LIMIT} candidates:
+          Your candidates complete Evaluations that measure their abilities. Your trial account is limited to assessing #{Group::TRIAL_CANDIDATE_LIMIT} candidates.
         %li 
           %span{ style: "font-family: 'MuliRegular';" } Email support is limited:
           If you require expedited and direct support, you may want to consider one of our 
