--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -28,7 +28,7 @@
                   %span.caret{ style: "margin: 6px 0 0 0;" }
                 %ul.dropdown-menu{ role: "button", style: "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;" }
                   %li
-                    %div.graynub{ style: "top:-15px; left: 60px; "}
+                    %div.graynub{ style: "top:-14px; left: 60px; "}
                     %div{ style: "margin: -15px -1px 5px;"}
                       %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
                         %li= link_to "Edit Submission", take_section_path(post.section_id, task_id: post.task_id), style: "padding: 3px 20px 3px 12px;"
@@ -74,6 +74,9 @@
                   = link_to "Add to Hall of Fame", admin_update_submission_path(post.submitted_answer_id, mark: "promoted"), method: :put, style: "color: #404040;"
                 - else
                   = link_to "In the Hall of Fame", "#"
+              |
+              %span
+                = link_to "Deny", admin_update_submission_path(post.submitted_answer_id, mark: "locked"), method: "put", remote: true, class: "mark_reviewed", style: "color: #404040;"
           - if post.submitted_answer_content && post.submitted_answer_content.downcase.include?("<html>")
             %iframe{ data: { content: post.submitted_answer_content, src: raw_path(post.submitted_answer_id) }, id: "iframe_#{post.submitted_answer_id}", style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
           - else
@@ -118,4 +121,11 @@
     - unless post.submitted_answer_caption.blank?
       %div.post_caption= post.submitted_answer_caption
     = render "comments/comments", social_details(post).merge(context: feed.context)
+    
+:javascript
+  $(function(){
+    $(".mark_reviewed").on("ajax:success", function(xhr, data){
+      $(this).parents(".post").hide("fast");
+    });
+  });
     
