--- a/app/views/newsfeed/_feed.html.haml
+++ b/app/views/newsfeed/_feed.html.haml
@@ -59,7 +59,7 @@
       })
 
   - feed.posts.each do |post|
-    = render "newsfeed/post", { post: post, feed: feed }
+    = render "newsfeed/post", { post: post, feed: feed, viewable: (feed.user_posts.include?(post.task_id.to_i)) }
   
   - if feed.url
     :javascript
