--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -52,71 +52,72 @@
       %code.dropdown-toggle{ "data-toggle" => "dropdown", role: "button"} #{post.question}
     
     %div#cr_pop.CRarea
-      - if post.answer_type == Task::CREATIVE
-        .preview
-          %div.sliderbar1
-            - if current_user and post.user_id == current_user.id
-              = link_to "Edit", take_section_path(post.section_id, task_id: post.task_id), style: "color: #404040;"
-              |
-            - unless feed.context == :submission 
-              %span
-                = link_to "View Full", submission_drilldown_path(post.submitted_answer_id), style: "color: #404040;"
-            - if post.submitted_answer_content && post.submitted_answer_content.downcase.include?("<html>")
+      - if viewable
+        - if post.answer_type == Task::CREATIVE
+          .preview
+            %div.sliderbar1
+              - if current_user and post.user_id == current_user.id
+                = link_to "Edit", take_section_path(post.section_id, task_id: post.task_id), style: "color: #404040;"
+                |
               - unless feed.context == :submission 
-                |  
-              %span.view_raw{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
-              | 
-              %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').data('src'));" } Reload
-            - if @enable_administration
-              |
-              %span
-                - if post.promoted_at.nil?
-                  = link_to "Add to Hall of Fame", admin_update_submission_path(post.submitted_answer_id, mark: "promoted"), method: :put, style: "color: #404040;"
-                - else
-                  = link_to "In the Hall of Fame", "#"
-              |
-              %span
-                = link_to "Deny", admin_update_submission_path(post.submitted_answer_id, mark: "locked"), method: "put", remote: true, class: "mark_reviewed", style: "color: #404040;"
-          - if post.submitted_answer_content && post.submitted_answer_content.downcase.include?("<html>")
-            %iframe{ data: { content: post.submitted_answer_content, src: raw_path(post.submitted_answer_id) }, id: "iframe_#{post.submitted_answer_id}", style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
-          - else
-            %code.content{ style: "word-break:normal;" }= post.submitted_answer_content
-        - if post.answer_sub_type == Task::TEXT
-          .raw.hide
-            %div.sliderbar2
-              %span.view_preview{ style: "color: #404040; padding-right: 5px; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.raw').hide(); $(this).parents('.CRarea').find('.preview').show();"} View Preview
-            %code.content{ style: "word-break:normal;" }= post.submitted_answer_content
-        - elsif post.answer_sub_type == Task::IMAGE
-          = image_tag(sanitize(post.image_url))
-      
-        - elsif post.answer_sub_type == Task::YOUTUBE
-          %center
-            %div.youtube_answer{ id: "youtube_answer_#{post.id}", alt: post.url }
+                %span
+                  = link_to "View Full", submission_drilldown_path(post.submitted_answer_id), style: "color: #404040;"
+              - if post.submitted_answer_content && post.submitted_answer_content.downcase.include?("<html>")
+                - unless feed.context == :submission 
+                  |  
+                %span.view_raw{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
+                | 
+                %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').data('src'));" } Reload
+              - if @enable_administration
+                |
+                %span
+                  - if post.promoted_at.nil?
+                    = link_to "Add to Hall of Fame", admin_update_submission_path(post.submitted_answer_id, mark: "promoted"), method: :put, style: "color: #404040;"
+                  - else
+                    = link_to "In the Hall of Fame", "#"
+                |
+                %span
+                  = link_to "Deny", admin_update_submission_path(post.submitted_answer_id, mark: "locked"), method: "put", remote: true, class: "mark_reviewed", style: "color: #404040;"
+            - if post.submitted_answer_content && post.submitted_answer_content.downcase.include?("<html>")
+              %iframe{ data: { content: post.submitted_answer_content, src: raw_path(post.submitted_answer_id) }, id: "iframe_#{post.submitted_answer_id}", style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
+            - else
+              %code.content{ style: "word-break:normal;" }= post.submitted_answer_content
+          - if post.answer_sub_type == Task::TEXT
+            .raw.hide
+              %div.sliderbar2
+                %span.view_preview{ style: "color: #404040; padding-right: 5px; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.raw').hide(); $(this).parents('.CRarea').find('.preview').show();"} View Preview
+              %code.content{ style: "word-break:normal;" }= post.submitted_answer_content
+          - elsif post.answer_sub_type == Task::IMAGE
+            = image_tag(sanitize(post.image_url))
         
-        - else
-          %div{style: "display: none;"}
-            = post.to_yaml
-      
-      - elsif post.answer_type == Task::CHECKIN
-        %div.task_post
-          %div.content
-            %code.content= post.submitted_answer_content
-          - if post.image_url.blank?
-            = image_tag ICON_CHECK_URL, alt: "Image placeholder", class: "preview_image", style:"height:auto; width:70px; margin-top:10px; z-index: 500;"
+          - elsif post.answer_sub_type == Task::YOUTUBE
+            %center
+              %div.youtube_answer{ id: "youtube_answer_#{post.id}", alt: post.url }
+          
           - else
-            = image_tag post.image_url, alt: "Image content", class: "preview_image", style:"height:auto; z-index: 500; #{'opacity:0.5' unless post.submitted_answer_content.blank?}"
-          %div.details
-            %h4.title
-              - if post.title.blank?
-                #{post.name} marked this task complete on #{post.created_at.strftime('%B %d, %Y')}.
-              - else
-                = truncate(post.title, length: 75)
-            - unless post.description.blank?
-              %h5.description{ style: "margin-bottom:2px; "}= truncate(post.description, length: 85)
-            - unless post.url.blank?
-              %h5{ style: "margin-top:0" }= link_to truncate(post.url, length:85), post.url
-              
-      - else raise "Unknown answer type: #{post.answer_type}"    
+            %div{style: "display: none;"}
+              = post.to_yaml
+        
+        - elsif post.answer_type == Task::CHECKIN
+          %div.task_post
+            %div.content
+              %code.content= post.submitted_answer_content
+            - if post.image_url.blank?
+              = image_tag ICON_CHECK_URL, alt: "Image placeholder", class: "preview_image", style:"height:auto; width:70px; margin-top:10px; z-index: 500;"
+            - else
+              = image_tag post.image_url, alt: "Image content", class: "preview_image", style:"height:auto; z-index: 500; #{'opacity:0.5' unless post.submitted_answer_content.blank?}"
+            %div.details
+              %h4.title
+                - if post.title.blank?
+                  #{post.name} marked this task complete on #{post.created_at.strftime('%B %d, %Y')}.
+                - else
+                  = truncate(post.title, length: 75)
+              - unless post.description.blank?
+                %h5.description{ style: "margin-bottom:2px; "}= truncate(post.description, length: 85)
+              - unless post.url.blank?
+                %h5{ style: "margin-top:0" }= link_to truncate(post.url, length:85), post.url
+                
+        - else raise "Unknown answer type: #{post.answer_type}"    
     
     - unless post.submitted_answer_caption.blank?
       %div.post_caption= post.submitted_answer_caption
