--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,5 +1,6 @@
 $divider: "https://s3.amazonaws.com/moonlite-nsdub/static/divider.png";
 
+$metabright_blue: #28507D;
 $landing_red: #dc7563;
 $landing_yellow: #e3b164;
 $landing_green: #73bb6e;
