--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -12,8 +12,10 @@
           %p You'll take 7 multiple choice questions to get a sense of your current skill level.
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
-          %h3 The Boss question
-          %p Just like in a video game, this question is a bit tougher and may require some creativity.
+          %h3 The Challenge Question
+          %p This question is more in depth and will put your creativity to the test. 
+          / %h3 The Boss question
+          / %p Just like in a video game, this question is a bit tougher and may require some creativity.
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
           %h3 This is just the beginning!
