--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -31,22 +31,24 @@
             .span7
               .hero
                 %h1 
-                  Prove your skills. 
+                  The 
+                  %span Credit Report
                   %br
-                  Be discovered.
+                  For Your
+                  %span Skills
                 %h3 MetaBright is a skill assessment platform that makes it easier to hire and be hired.
               .triangle
             .span5
-              .row-fluid.consumer
-                .option
-                  %h4 I want to be discovered.
-                  %p MetaBright is the game that can get you a job. Showcase your skills and compete against others.
-                  %button.button{ onclick: "goto('#consumer_slide', this); return false" } Get Started
               .row-fluid.employer
                 .option{ "data-no-turbolink" => true } 
                   %h4 I want to test my candidates.
                   %p The MetaBright Evaluator validates the skills of your job candidates before you interview them.
                   %button.button{ onclick: "document.location.href = '/evaluator';"} Learn More
+              .row-fluid.consumer
+                .option
+                  %h4 I want to be discovered.
+                  %p Use MetaBright to measure your skills and showcase your ability to potential employers.
+                  %button.button{ onclick: "goto('#consumer_slide', this); return false" } Get Started
           #consumer_slide
             .span12
               %h3 Take Challenges to measure and showcase your skills.
